<resources>

    <!--    Marc-->
    <string name="new_experience">Start Experience</string>
    <string name="new_restaurant_info">Do not see your restaurant?</string>
    <string name="restaurant_selected">Restaurant Selected: </string>
    <string name="refresh_list">Refresh List</string>

    <!--    Duo-->
    <string name="main_acitivity">Tips App</string>
    <string name="ViewHistory_activity">View History</string>
    <string name="history_list">View My History List</string>
    <string name="deleteTable">Delete All Data</string>
    <string name="restaurant_chooser">Pick A Restaurant</string>
<!--    <string name="title_size">10pt</string>-->

    <!--    Soobin-->
    <string name="add_experience">Add an Experience</string>
    <string name="tip_result">Your Bill</string>
    <string name="split_bill">Split Your Bill</string>
    <string name="receive_message">Split With Your Friends</string>
    <string name="chooser">Send message via...</string>
    <string name="criteria_heading">Review Criteria</string>
    <string name="notify_user_title">Update Experience?</string>
    <string name="notify_user_text">Would you like to update your current experience?</string>

    <string name="poor">Poor</string>
    <string name="meh">Meh</string>
    <string name="ok">Ok</string>
    <string name="good">Good</string>
    <string name="great">Great</string>

    <string-array name="criteria">
        <item>Service</item>
        <item>Timeliness</item>
        <item>Food</item>
    </string-array>

    <string-array name="criteria_img">
        <item>tip_result</item>
        <item>tip_result.png</item>
        <item>tip_result</item>
    </string-array>

</resources>
