<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/preset_criteria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp"
        android:textColor="#581845"/>

    <RadioGroup
        android:id="@+id/radio_group_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rate_poor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poor"/>
        <RadioButton
            android:id="@+id/rate_meh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meh"/>
        <RadioButton
            android:id="@+id/rate_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>
        <RadioButton
            android:id="@+id/rate_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"/>
        <RadioButton
            android:id="@+id/rate_great"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/great"/>
    </RadioGroup>

</LinearLayout>